--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 Hello World, from Mauricio Bañarez
 <html>
-  <img src="2020 diciembre 4 B 027.JPG">
+  <img src="2020 diciembre 4 B 027.JPG" alt="" width="50%" height="50%" />
 
 </html>
