--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
-Hello World, from Mauricio Bañarez
+
 <html>
-  <img src="2020 diciembre 4 B 027.JPG" alt="" width="10%" height="10%"/>
+  <head>
+  <title>Hello World, from Mauricio Bañarez</title>
+</head>
+
+<body>
+  <h1>This is a heading</h1>
+  <p>This is a paragraph.</p>
+  <img src="2020 diciembre 4 B 027.JPG" alt="" width="10%" height="20%"/>
+</body>
+  
 
 </html>
