--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 
 <html>
   <head>
-  <title>Hello World, from Mauricio Bañarez</title>
+  <title></title>
 </head>
 
 <body>
-  <h1>This is a heading</h1>
-  <p>This is a paragraph.</p>
+  <h1>Hello World, from Mauricio Bañarez</h1>
+  <p>This is my family.</p>
   <img src="2020 diciembre 4 B 027.JPG" alt="" width="10%" height="20%"/>
 </body>
   
